Fix offcenter footer

--- a/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
+++ b/src/vs/workbench/contrib/welcome/gettingStarted/browser/gettingStarted.css
@@ -219,7 +219,7 @@
 	position: absolute;
 	text-align: center;
 	bottom: 0;
-	width: 100%;
+	width: calc(100% - 40px);
 	margin-bottom: 20px;
 }
 
